--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <head>
   <link rel="stylesheet" href="./styles.css" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/7.6.1/d3.min.js"></script>
 </head>
 
 <body>
   <div class="main">
-    <div class="title">Doping in Professional Bicycle Racing</div>
-    <div class="sub-title">35 Fastest times up Alpe d'Huez</div>
+    <div id="title">Doping in Professional Bicycle Racing</div>
+    <div id="sub-title">35 Fastest times up Alpe d'Huez</div>
     <div class="vis"></div>
   </div>
 </body>
 <script type="text/javascript" src="./script.js"></script>
+<script
+  type="text/javascript"
+  src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"
+></script>
